--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,16 @@
 *{
     scroll-behavior: smooth;
 }
+
+:root {
+    --font-family: 'Manrope', sans-serif;
+  
+    --gradient-text: linear-gradient(90deg, rgba(227, 50, 86, 1) 0%, rgba(127, 24, 89, 1) 72%, rgba(137, 13, 126, 1) 100%);
+  }
+
+  .gradient__text{
+    background: var(--gradient-text);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
