--- a/src/index.css
+++ b/src/index.css
@@ -18,3 +18,6 @@
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
+.gradient__bg{
+  background: var(--gradient-text)
+}
